samples/_failures_safe/1760959230_113b28_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6fe447ff.c: In function ‘main’:
./samples/SAFE/__tmp_6fe447ff.c:188:9: error: expected expression at end of input
  188 |         if (sm.current_state >= 0 && sm.current_state <
      |         ^~
./samples/SAFE/__tmp_6fe447ff.c:188:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6fe447ff.c:188:9: error: expected declaration or statement at end of input
